Replaced "template" content with actual template content in portfolio. Added padding to body to prevent overlap with sticky footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
     background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/fishnets-and-hearts.png");
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
+    padding-bottom: 5%;
 }
 
 .container {
